flask-web-server-headers/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: the-
  namespace: default
spec:service
  selector:
    deployment: hello
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
